--- a/hello_js.html
+++ b/hello_js.html
@@ -17,8 +17,6 @@
             // 今は使ってはいけない
             document.write("Hello World!");
 
-            var array_number = new Array(5);
-
             // 範囲指定してランダムな整数を得るのが少し面倒
             // この関数は最小値以上最大値未満の整数を返す
             function getRandomInt(min, max) {
@@ -26,6 +24,22 @@
                 max = Math.floor(max);
                 return Math.floor(Math.random() * (max - min) + min);
             }
+
+            // 引数の型を指定することはできない
+            // チェックしたかったら関数の中で確かめる
+            function FizzBuzz(sum_number){
+                if (sum_number%3 == 0 && sum_number%5 == 0){
+                    return "FizzBuzz";
+                } else if (sum_number%3 == 0) {
+                    return "Fizz";
+                } else if (sum_number%5 == 0) {
+                    return "Buzz";
+                } else {
+                    return string(sum_number);
+                }
+            }
+
+            var array_number = new Array(5);
 
             for(let i=0; i<5; i++) {
                 array_number[i] = getRandomInt(0,101)
@@ -38,15 +52,7 @@
             // こうでもいい
             // let sum_number = array_number.reduce((sum, element) => sum + element, 0);
 
-            if (sum_number%3 == 0 && sum_number%5 == 0){
-                res = "FizzBuzz";
-            } else if (sum_number%3 == 0) {
-                res = "Fizz";
-            } else if (sum_number%5 == 0) {
-                res = "Buzz";
-            } else {
-                res = sum_number;
-            }
+            res = FizzBuzz(sum_number)   
 
             console.log(res)
        　</script>
